# AlcAI-nodes

./: README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
json/: danbooru_chars_mp_sorted_top10p_no_multi.json
nodes/: AnimeCharacterSelector.py  BatchTokenizeText.py  BooruImageLoader.py  CustomLoraLoader.py  ImageLoaderEnhanced.py  LogicGates.py  LoraNameSelector.py  ModelInfoSelector.py  RandomResSDXL.py  WatermarkNode.py  WordShuffler.py
web/extensions/: AnimeCharacterSelector.js  CustomLoraLoader.js  ImageLoaderEnhanced.js  booruDynamicLoader.js
workflows/: upscaling workflow.json  workflow_image_generation.json
